# crime-stats-analysis

./: .gitignore  README.md  buf.gen.yaml  buf.yaml
go/: go.mod
go/crimestats/: crime_stats.pb.go
go/proto/: crime_stats.pb.go
go/server/: main.go
go/server/bing/: binglocations.go  models.go
go/server/crimedata/: crimedata.go  models.go
proto/: crime_stats.proto
python/proto/: crime_stats_pb2.py
python/server/: main.py  pyproject.toml
python/server/proto/: crime_stats_grpc.pb.go  crime_stats_pb2.py  crime_stats_pb2_grpc.py
