[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Marcellus Easley <marcellus.easley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
grpcio-reflection = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
